# Shadowsocks-GUI-Rust

./: Cargo.toml  README.md
src/: client.rs  config.rs  dialog.rs
