[package]
name = "Shadowsocks-GUI"
version = "1.22.2"
edition = "2021"
description = "Shadowsocks GUI"
license = "MIT"
build = "build.rs"

[[bin]]
name = "russ"
path = "src/main.rs"

[dependencies]
#native-windows-gui = { git = "https://github.com/gabdube/native-windows-gui.git", branch = "master", features = [ "all" ] }
#native-windows-derive = { git = "https://github.com/gabdube/native-windows-gui.git", branch = "master" }

native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"

winapi = { version = "0.3.9", features = ["winuser", "wingdi"] }
winreg = "0.52.0"

serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_derive = "1.0.209"

anyhow = "1.0.86"
log = "0.4.22"
log4rs = "1.3.0"

futures = "0.3.30"
tokio = { version = "1.40", features = ["full"] }

// غيَّرت هذا لأتمكن من إضافة الكراتيس مباشرةً داخل المسار ثم أبني
# shadowsocks = { git = "https://github.com/samanajd2/shadowsocks-rust", branch = "master" }
# shadowsocks-service = { git = "https://github.com/samanajd2/shadowsocks-rust", branch = "master", features = ["local"] }

// وهذا هو البديل
shadowsocks = { path = "./crates/shadowsocks" }
shadowsocks-service = { path = "./crates/shadowsocks-service",  features = ["local"] }

#shadowsocks = "1.16.1"
#shadowsocks-service = { version = "1.16.1", features = ["local"] }

[build-dependencies]
winapi = "0.3.9"
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "russ.exe"
LegalCopyright = "Open Source MIT"
