[package]
name = "ShadowsocksRust-GUI"
version = "1.23.4"
edition = "2024"
description = "ShadowsocksRust-GUI"
license = "MIT"
build = "build.rs"
rust-version = "1.87"

[[bin]]
name = "russ"
path = "src/main.rs"

[dependencies]
#native-windows-gui = { git = "https://github.com/gabdube/native-windows-gui.git", branch = "master", features = [ "all" ] }
#native-windows-derive = { git = "https://github.com/gabdube/native-windows-gui.git", branch = "master" }

native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"

winapi = { version = "0.3", features = ["winuser", "wingdi"] }
winreg = "0.55"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"

anyhow = "1"
log = "0.4"
log4rs = "1"

futures = "0.3"
tokio = { version = "1", features = ["full"] }

shadowsocks = { git = "https://github.com/samanajd2/shadowsocks-rust", branch = "master" }
shadowsocks-service = { git = "https://github.com/samanajd2/shadowsocks-rust", branch = "master", features = ["local"] }

icu_locid_transform_data = "1.5.1"

[build-dependencies]
winapi = "0.3"
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "russ.exe"
LegalCopyright = "Open Source MIT"
